@startuml
'https://plantuml.com/class-diagram

class EndGameState
class WinGameState
class MainMenuState
class GameState
class Application
interface IApplicationState

IApplicationState <|.. WinGameState
IApplicationState <|.. EndGameState
IApplicationState <|.. GameState
IApplicationState <|.. MainMenuState
Application <-- IApplicationState
Application o-- WinGameState
Application o-- EndGameState
Application o-- MainMenuState
Application o-- GameState


@enduml